fixed overflow x hidden on global css

--- a/app/globals.css
+++ b/app/globals.css
@@ -372,7 +372,6 @@ svg {
   flex-grow: 1 ;
   overflow-y: scroll ;
   padding: 0 4em ;
-  overflow-x: hidden;
 }
 
 .body-no-scroll {
