--- a/app/who-we-are/page.module.css
+++ b/app/who-we-are/page.module.css
@@ -3,7 +3,6 @@
   display: flex;
   flex-direction: column;
   color: var(--black);
-  /* padding: 0 4em; */
   gap: 3em;
   min-height: 20vw;
 }
@@ -11,36 +10,36 @@
 .main p {
   margin: 0;
 }
-.downbarTop {
-  width: 100vw;
-  position: relative;
-  left: 50%;
-  right: 50%;
-  margin-left: -50vw;
-  margin-right: -50vw;
-  display: flex;
-  background-color: var(--main);
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-  padding: 5em 0;
-  gap: 2em;
-  margin-top: -4rem;
+.downbarMainCon {
+	display: flex;
+	flex-direction: column;
+	margin: 0 -4em;
+	
 }
-.main_bread {
+.downbarTop {
+	display: flex;
+	width: 100%;
+	background-color: var(--main);
+	align-items: center;
+  flex-direction: column;
+	justify-content: center;
+	padding: 2em 0;
+	gap: 2em ;
+}
+.main_bread{
   font-size: 16px;
   font-weight: 600;
   line-height: 20.8px;
   color: white;
 }
-.breadContent {
+.breadContent{
   font-weight: 700;
   font-size: 36px;
   line-height: 50.4px;
   color: white;
   margin-top: 10px;
 }
-.downHead {
+.downHead{
   display: flex;
   flex-direction: row;
   gap: 0px 15px;
@@ -180,13 +179,10 @@
 .timelineSection {
   background-color: var(--main); /* Dark BG */
   padding: 5rem 0;
-  width: 90%;
  border-radius: 20px;
   display: flex;
-  margin-left: 4.8rem;
   justify-content: center;
   align-items: center;
-  
   color: white;
 }
 
